Start implementing new design

--- a/templates/_layout/index.html
+++ b/templates/_layout/index.html
@@ -1,178 +1,85 @@
-
-    <div class="layout-row bleeding layout-row-introbanner">
-      <div class="view view-agnl-cta view-id-agnl_cta view-display-id-block_cta_banner view-cta-banner-block view-dom-id-9808f37e3211adc118ae674a56754b26">
-      <div class="view-content">
-        <div class="background-lightest">
-    
-
-  <img class="header-image" src="http://english.rvo.nl/sites/default/files/styles/agnl_introbanner/public/Corporate%20beeld%20Engelstalig%20Dutch%20Plantin%20header-.jpg?itok=1jsQMVNs" width="896" height="216">    <div class="intro-banner-text">
-    <div class="intro-body">
-              <h1 id="content_title" tabindex="-1">Netherlands Enterprise Agency Transparency Portal</h1>
-                    <div><p><span>Find out how the Netherlands Enterprise Agency invests in developing countries and what the results are of those aid projects.</span></p></div>          
+<div class="row header">
+  <div class="col-md-8 pic">
+    <div class="panel">
     </div>
-    <div class="intro-more-button">
-                <span class="text-ribbon bottom-right">        <a href="/home/about-rvonl/what-is-rvonl">About RVO.nl</a>        </span>          </div>
   </div>
-    <div id="banner-call-to-action" class="contact introbanner  agnl-sctrack agnl-sc-calltoaction">
-          <h2>About this portal</h2>      <div class="banner-cta-inner">
-      <div class="telephone"><strong>Call: </strong> +31 (0)88 0424242</div>
-              <div class="fancy-list arrow">        <div class="item-list"><ul><li class="first" style="margin-top: 8px;"><a target="_blank" href="http://www.iatiregistry.org/dataset/rvo-01">IATI data source updated: 2015-09-16 07:46 · No. of Activities: 810</a></li>
-                <li class="last" style="margin-top: 8px;"><a target="_blank" href="https://www.google.nl/chrome/browser/desktop/">This beta PoC portal has been optimized for browsing in Google Chrome.</a></li>
-</ul></div>        </div>                  </div>  
-                </div>
-            </div>
+  <div class="col-md-4">
+    <div class="panel transparent">
+      <h1>Open data of the Netherlands Enterprise Agency</h1>
+      <p>Find open data on development aid projects and programs executed  by the Netherlands Enterprise Agency  and funded by the Dutch Ministry of Foreign Affairs. Data reported to the IATI registry.</p>
+    </div>
+  </div>
+  <div class="col-md-4 col-md-offset-4">
+    <div class="panel">
+      <h1>About this portal</h1>
+      <p>This portal visualizes the IATI data on official development aid projects and programmes executed by the Netherlands Enterprise Agency.</p>
+    </div>
+  </div>
+</div>
+
+<div class="container homepage-blocks">
+  <div class="row">
+    <div class="col-sm-3">
+      <div class="panel">
+        <h3><a ui-sref="activities" class="icon lightbulb">Projects</span></a></h3>  
+        <p>Get detailed overview of projects.</p>  
+      </div>
+    </div>
+    <div class="col-sm-3">
+      <div class="panel">
+        <h3><a ui-sref="locations-map" class="icon satelite">Countries</span></a></h3>  
+        <p>Get detailed overview of projects </p> 
+      </div>
+    </div>
+    <div class="col-sm-3">
+      <div class="panel">
+        <h3><a ui-sref="sector-list" class="icon globe">Sectors</span></a></h3>  
+        <p>See which sectors we work in.</p> 
+      </div>
+    </div>
+    <div class="col-sm-3">
+      <div class="panel">
+        <h3><a ui-sref="sector-list" class="icon handshake">Programmes</span></a></h3>  
+        <p>See which programmes we participate in.</p> 
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row hidden-xs">
+    <div class="col-sm-12 map">
+        <div class="geomap-mask">  
+            <locations-geo-map map-height='450px' map-legend='false' map-dropdown='false'></locations-geo-map>
         </div>
     </div>
 </div>
 
-<div id="layout-row-1" class="layout-row bleeding no-menu">
-      <div id="layout-content-wrapper">
-        <div class="clearfix" id="content-top">
-                                          
-          
-          
-          
-                  </div><!-- /#content-top -->
-
-        <div class="clearfix"><!-- CONTENT and ASIDES -->
-
-  
-    <!-- we need this for showing error messages in showmodals -->
-    
-          
-   
-
-          
-          
-        </div><!-- /.clearfix -->
-
-        <div id="grid-content-bottom" class="clearfix">
-          
-          
-                  </div><!-- /#grid-content-bottom -->
-      </div><!-- /#layout-content-wrapper -->
-      
-      
-    </div>
-
-<div id="layout-row-2" class="layout-row layout-has-1-blocks">
-
-                  <div class="layout-block layout-col-1">
-                  
-
-
-  
-  
-  
-      <div class="view view-agnl-toptaak view-id-agnl_toptaak view-display-id-block_toptask view-dom-id-dde7a903f526b8b4a8a476f26dd74fd8">
-        
-  
-  
-      <div class="view-content">
-        <div class="views-row-odd views-row-first boxed equalrows " style="height: 98px;">
-      
-  <h3>        <a ui-sref="activities" class="icon-lightbulb"><span class="single-word">Projects</span></a>  </h3>  
-          <p>Get detailed overview of projects.</p>    </div>
-  <div class="views-row-even boxed equalrows " style="height: 98px;">
-      
-  <h3>        <a ui-sref="locations-map" class="icon-money"><span class="single-word">Countries</span></a>  </h3>  
-          <p>Get detailed overview of projects </p>    </div>
-  <div class="views-row-odd boxed equalrows " style="height: 98px;">
-      
-  <h3>        <a ui-sref="sector-list" class="icon-globe"><span class="single-word">Sectors</span></a>  </h3>  
-          <p>See which sectors we work in.</p>    </div>
-  <div class="views-row-even views-row-last boxed equalrows " style="height: 98px;">
-      
-  <h3>        <a ui-sref="organisations" class="icon-globe"><span class="single-word">Organisations</span></a>  </h3>  
-          <p>See who we work and help.</p>    </div>
-    </div>
-  
-  
-  
-  
-      <div class="view-footer">
-      <div class="more-link"></div>    </div>
-  
-  
-</div>  
-
-
-
-            </div>
-        
-        
-
-        
-        
+<div class="row">
+  <div class="col-sm-12">
+    <div class=" front-callout">
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="panel">
+            Total Budget on development aid projects and programs executed  by the Netherlands Enterprise Agency since 2009.  
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="panel big">
+            € 671.46 mln
+          </div>
+        </div>
       </div>
-
-    <div class="row hidden-xs">
-        <div class="col-sm-12">
-            <h2 style="padding-left: 31px; font-size: 23px; line-height: 24px;margin-top: 0px; font-weight: normal;letter-spacing: 0.5px;margin-bottom: 9px;color: #114476;">Country overview map</h2>
-        </div>
     </div>
+  </div>
+</div>
 
-    <div class="row hidden-xs">
-        <div class="col-sm-12 map">
-            <div class="geomap-mask">  
-                <locations-geo-map map-height='600px' map-legend='false' map-dropdown='false'></locations-geo-map>
-            </div>
-        </div>
+<div class="row visualize">
+    <div class="col-sm-4">
     </div>
-
-
-    <div class="row hidden-xs">
-        <div class="col-sm-12">
-            <h2 style="padding-left: 31px; font-size: 23px; line-height: 24px;margin-top: 20px; font-weight: normal;letter-spacing: 0.5px;margin-bottom: 9px;color: #114476;">Quick data scan</h2>
-        </div>
+    <div class="col-sm-4">
     </div>
-
-
-    <div class="row hidden-xs">
-        <div class="col-md-12">
-            <div class="hp-block no-padding wit clearfix top5">
-
-<!-- <a class="glyphicon glyphicon-info-sign" ng-mouseover="hoverIn('landen')" ng-mouseleave="hoverOut('landen')">
-                    </a>
-                    <div 
-                    class="glyphicon-popup" 
-                    ng-show="vm.customFields['landen'].hoverShow" 
-                    ng-bind-html="vm.customFields['landen']['text']">
-                    </div> -->
-
-                <oipa-table-chart 
-                    aggregation-filters='vm.tableChartOptions.aggregationFilters' 
-                    group-by='vm.tableChartOptions.groupBy' 
-                    group-by-id='vm.tableChartOptions.groupById' 
-                    group-sref='vm.tableChartOptions.groupSref' 
-                    aggregation-key='vm.tableChartOptions.aggregationKey' 
-                    aggregation-extra-select='vm.tableChartOptions.aggregationExtraSelect' 
-                    aggregation-extra-select-in='vm.tableChartOptions.aggregationExtraSelectIn' 
-                    refresh-data='vm.refreshTableChart' 
-                    shown-ids='vm.shownIds' 
-                    top-five='vm.top5' 
-                    activity-status='vm.activityStatus' 
-                    transaction-year='vm.transactionYear' 
-                ></oipa-table-chart>
-
-            </div>
-        </div>
+    <div class="col-sm-4">
     </div>
-    <div class="row hidden-xs hp-line-chart">
-        <div class="col-md-12">
-            <div class="hp-block wit">
-             <oipa-line-chart 
-                aggregation-filters='vm.shownIds' 
-                has-to-contain='activity_status' 
-                group-by='vm.lineChartOptions.groupBy' 
-                group-by-id='vm.lineChartOptions.groupById' 
-                aggregation-key='disbursement' 
-                chart-x-axis='' 
-                chart-y-axis='Expenditure' 
-                chart-y-axis-euro-format='true' 
-                chart-x-axis-stagger-labels='false' 
-                chart-type='multiBarChart' 
-                axis-label-distance='28'></oipa-line-chart>
-            </div>
-        </div>
-    </div>
+</div>
+
+
