--- a/templates/pages/pages.html
+++ b/templates/pages/pages.html
@@ -1,24 +1,9 @@
-<div id="main-content" class="about-page">
-
+<div id="main-content" class="about-page container">
 	<div class="row">
-        <div class="col-sm-12 ">
-            <div class="hp-block hp-block-top hp-home" style="text-align: left;">
-            	<div class="row">
-            		<div class="col-lg-8 col-md-10 col-md-offset-1 col-lg-offset-2">
-		                <h1 style="font-size: 36px; color: #114476;margin-top: 26px;">Netherlands Enterprise Agency (Rijksdienst voor Ondernemend Nederland)</h1>
-		                
-	                </div>
-                </div>
-            </div>
-        </div>
-    </div>
+        <div class="col-sm-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
+		    <h1>Netherlands Enterprise Agency (Rijksdienst voor Ondernemend Nederland)</h1>
 
-	<div class="row">
-		<div class="col-lg-6 col-md-8 col-md-offset-1 col-lg-offset-2">
-
-<!-- 		    <hr>
- -->
-			<div class="row actions">
+			<div class="row actions padding-bottom-2">
 		    	<div class="col-sm-12 social" style="text-align: left !important;">
 		    		<span class="fa-stack fa-lg">
 				    	<i class="fa fa-circle fa-stack-2x"></i>
@@ -35,18 +20,10 @@
 			   	</div>
 		   	</div>
 
-		   	<hr>
-
-<p><strong>Netherlands Enterprise Agency (RVO.nl) encourages entrepreneurs in sustainable, agrarian, innovative and international business. It helps with grants, finding business partners, know-how and compliance with laws and regulations.</strong></p>
-			
-<p>
-
-The aim is to improve opportunities for entrepreneurs and strengthen their position. The Agency works at the instigation of ministries and the European Union.<br>&nbsp;<br>
-
-Netherlands Enterprise Agency is part of the Ministry of Economic Affairs. The organisation has been in existence since 2014 and is the result of a merger between NL Agency and the Dienst Regelingen. Some activities of the Commodities Boards are also included. <br>&nbsp;<br>
-
-Netherlands Enterprise Agency focuses on providing services to entrepreneurs. It aims to make it easier to do business using smart organisation and digital communication. The Agency works in The Netherlands and abroad with governments, knowledge centres, international organisations and countless other partners.<br>&nbsp;<br>
-			</p>
+			<p><strong>Netherlands Enterprise Agency (RVO.nl) encourages entrepreneurs in sustainable, agrarian, innovative and international business. It helps with grants, finding business partners, know-how and compliance with laws and regulations.</strong></p>		
+			<p>The aim is to improve opportunities for entrepreneurs and strengthen their position. The Agency works at the instigation of ministries and the European Union.</p>
+			<p>Netherlands Enterprise Agency is part of the Ministry of Economic Affairs. The organisation has been in existence since 2014 and is the result of a merger between NL Agency and the Dienst Regelingen. Some activities of the Commodities Boards are also included. </p>
+			<p>Netherlands Enterprise Agency focuses on providing services to entrepreneurs. It aims to make it easier to do business using smart organisation and digital communication. The Agency works in The Netherlands and abroad with governments, knowledge centres, international organisations and countless other partners.</p>
 			
 		</div>
 	</div>
