--- a/templates/filters/filter-panel-activity-status.html
+++ b/templates/filters/filter-panel-activity-status.html
@@ -1,35 +1,37 @@
 <div class="filter-panel">
-	<div class="row" ng-show="vm.activityStatuses.length == 0">
-		<div class="svg-loader">
-			<img src="{{templateBaseUrl}}/images/spinning-circles.svg" width="70" alt="">
+	<div class="container">
+		<div class="row" ng-show="vm.activityStatuses.length == 0">
+			<div class="svg-loader">
+				<img src="{{templateBaseUrl}}/images/spinning-circles.svg" width="70" alt="">
+			</div>
 		</div>
-	</div>
-	<div class="row" ng-show="vm.activityStatuses.length != 0">
-		<div class="col-md-12">
-			<table class="table">
-				<thead>
-					<tr>
-						<td class="th-first">Select one or more statuses</td>
-					</tr>
-				</thead>
-				<tbody>
+		<div class="row" ng-show="vm.activityStatuses.length != 0">
+			<div class="col-md-12">
+				<table class="table">
+					<thead>
+						<tr>
+							<td class="th-first">Select one or more statuses</td>
+						</tr>
+					</thead>
+					<tbody>
 
-				    <tr dir-paginate="item in vm.activityStatuses | itemsPerPage: 4"  pagination-id="activityStatuses">
-				    	<td>
-				    		<div class="checkbox">
-					    		<label class="switch">
-					    			<input type="checkbox" checklist-model="vm.selectedActivityStatuses" checklist-value="item"><i></i>
-					    			<span>{{ item.name }}</span>
-					    		</label>
-					    	</div>
-				    	</td>
-				    	<td>
-				    		{{ item.activity_count }}
-				    	</td>
-				    </tr>
+					    <tr dir-paginate="item in vm.activityStatuses | itemsPerPage: 4"  pagination-id="activityStatuses">
+					    	<td>
+					    		<div class="checkbox">
+						    		<label class="switch">
+						    			<input type="checkbox" checklist-model="vm.selectedActivityStatuses" checklist-value="item"><i></i>
+						    			<span>{{ item.name }}</span>
+						    		</label>
+						    	</div>
+					    	</td>
+					    	<td>
+					    		{{ item.activity_count }}
+					    	</td>
+					    </tr>
 
-				</tbody>
-			</table>
+					</tbody>
+				</table>
+			</div>
 		</div>
 	</div>
 </div>
