--- a/templates/filters/filter-panel-budget.html
+++ b/templates/filters/filter-panel-budget.html
@@ -1,4 +1,5 @@
 <div class="filter-panel budget">
+	<div class="container">
 	<div class="checkbox">
 		<label class="switch">
 			<input type="checkbox" ng-model="vm.on"><i></i>
@@ -26,4 +27,5 @@
 		</slider>
 	</div>
 	<button class="btn btn-default btn-openaid btn-save" ng-click="vm.save()">Save</button>
+	</div>
  </div>
