--- a/templates/filters/filter-panel-implementing-organisations.html
+++ b/templates/filters/filter-panel-implementing-organisations.html
@@ -1,4 +1,5 @@
 <div class="filter-panel">
+	<div class="container">
 	<div class="row filter-panel-header-wrapper">
 
 		<div class="col-md-4">
@@ -56,5 +57,6 @@
 				pagination-id="implementingOrganisations"
 				on-page-change="vm.pageChanged(newPageNumber)"></dir-pagination-controls>
 		</div>
+	</div>
 	</div>
 </div>
