--- a/templates/filters/filter-panel-recipient-regions.html
+++ b/templates/filters/filter-panel-recipient-regions.html
@@ -1,4 +1,5 @@
 <div class="filter-panel">
+<div class="container">
 	<div class="row filter-panel-header-wrapper">
 		<div class="col-md-4">
 			<div class="search-box">
@@ -53,4 +54,5 @@
 			<dir-pagination-controls pagination-id="recipientRegions" on-page-change="vm.pageChanged(newPageNumber)"></dir-pagination-controls>
 		</div>
 	</div>
+</div>
 </div>
