--- a/templates/filters/filter-panel-search.html
+++ b/templates/filters/filter-panel-search.html
@@ -1,4 +1,5 @@
 <div class="filter-panel">
+<div class="container">
     <div class="row filter-panel-header-wrapper">
         <div class="col-md-6">
             <div class="search-box keywords">
@@ -16,4 +17,5 @@
 
 <!--     <button class="btn btn-default btn-openaid btn-save" ng-click="vm.save()">Voeg trefwoord toe aan filters</button>
  -->
+ </div>
  </div>
