--- a/templates/filters/filter-panel-transaction-year.html
+++ b/templates/filters/filter-panel-transaction-year.html
@@ -1,4 +1,5 @@
 <div class="filter-panel budget">
+<div class="container">
 	<div class="checkbox">
 		<label class="switch">
 			<input type="checkbox" ng-model="vm.on"><i></i>
@@ -32,4 +33,5 @@
         </div>
     </div><br>
 	<button class="btn btn-default btn-openaid btn-save" ng-click="vm.save()">Save</button>
+</div>
 </div>
