--- a/templates/filters/filter-selection-box.html
+++ b/templates/filters/filter-selection-box.html
@@ -1,63 +1,60 @@
-<div class="filter-selected row" ng-show="vm.filterSelection.selectionString.length">
-	<div class="col-md-12">
-		<div class="filter-box">
-			<a class="btn filter-selected-button selectedCountries" ng-repeat="item in vm.selectedCountries" ng-click="vm.removeFilter(vm.selectedCountries, item.code)">
-				{{item.name}}
-				<span class="fa fa-remove"></span>
-			</a>
+<div class="filter-selected" ng-show="vm.filterSelection.selectionString.length">
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-12">
+				<div class="filter-box">
+					<span class="selected-items">Your selection: </span>
+					<a class="selected filter-selected-button selectedCountries" ng-repeat="item in vm.selectedCountries" ng-click="vm.removeFilter(vm.selectedCountries, item.code)">
+						{{item.name}}
+					</a>
 
-			<a class="btn filter-selected-button selectedRegions" ng-repeat="item in vm.selectedRegions" ng-click="vm.removeFilter(vm.selectedRegions, item.code)">
-				{{item.name}}
-				<span class="fa fa-remove"></span>
-			</a>
+					<a class="selected filter-selected-button selectedRegions" ng-repeat="item in vm.selectedRegions" ng-click="vm.removeFilter(vm.selectedRegions, item.code)">
+						{{item.name}}
+					</a>
 
-			<a class="btn filter-selected-button selectedSectors" ng-repeat="item in vm.selectedSectors" ng-click="vm.removeFilter(vm.selectedSectors, item.code)">
-				{{item.name}}
-				<span class="fa fa-remove"></span>
-			</a>
+					<a class="selected filter-selected-button selectedSectors" ng-repeat="item in vm.selectedSectors" ng-click="vm.removeFilter(vm.selectedSectors, item.code)">
+						{{item.name}}
+					</a>
 
-			<a class="btn filter-selected-button selectedImplementingOrganisations" ng-repeat="item in vm.selectedImplementingOrganisations" ng-click="vm.removeFilter(vm.selectedImplementingOrganisations, item.code)">
-				{{item.name}}
-				<span class="fa fa-remove"></span>
-			</a>
+					<a class="selected filter-selected-button selectedImplementingOrganisations" ng-repeat="item in vm.selectedImplementingOrganisations" ng-click="vm.removeFilter(vm.selectedImplementingOrganisations, item.code)">
+						{{item.name}}
+					</a>
 
-			<a class="btn filter-selected-button selectedActivityStatuses" ng-repeat="item in vm.selectedActivityStatuses" ng-click="vm.removeFilter(vm.selectedActivityStatuses, item.code)">
-				{{item.name}}
-				<span class="fa fa-remove"></span>
-			</a>
+					<a class="selected filter-selected-button selectedActivityStatuses" ng-repeat="item in vm.selectedActivityStatuses" ng-click="vm.removeFilter(vm.selectedActivityStatuses, item.code)">
+						{{item.name}}
+					</a>
 
-			<a 
-				ng-if="vm.search.searchString.length > 0" 
-				class="btn filter-selected-button selectedRegions" 
-				ng-click="vm.removeSearch()">
-				'{{vm.search.searchString}}'
-				<span class="fa fa-remove"></span>
-			</a>
+					<a 
+						ng-if="vm.search.searchString.length > 0" 
+						class="selected filter-selected-button selectedRegions" 
+						ng-click="vm.removeSearch()">
+						'{{vm.search.searchString}}'
+					</a>
 
-			<a 
-				class="btn filter-selected-button selectedActivityStatuses" 
-				ng-show="vm.selectedBudget.on" 
-				ng-click="vm.removeBudgetFilter()">
-				Budget: {{vm.selectedBudget.value[0] | shortcurrency :'€'}} - {{vm.selectedBudget.value[1] | shortcurrency :'€'}}
-				<span class="fa fa-remove"></span>
-			</a>
+					<a 
+						class="selected filter-selected-button selectedActivityStatuses" 
+						ng-show="vm.selectedBudget.on" 
+						ng-click="vm.removeBudgetFilter()">
+						Budget: {{vm.selectedBudget.value[0] | shortcurrency :'€'}} - {{vm.selectedBudget.value[1] | shortcurrency :'€'}}
+					</a>
 
-			<a 
-				class="btn filter-selected-button selectedActivityStatuses" 
-				ng-show="vm.selectedTransactionYear.on" 
-				ng-click="vm.removeTransactionYearFilter()">
-				Transaction date year: {{vm.selectedTransactionYear.value}}
-				<span class="fa fa-remove"></span>
-			</a>
+					<a 
+						class="selected filter-selected-button selectedActivityStatuses" 
+						ng-show="vm.selectedTransactionYear.on" 
+						ng-click="vm.removeTransactionYearFilter()">
+						Transaction date year: {{vm.selectedTransactionYear.value}}
+					</a>
 
-			<div style="margin-bottom:4px;" ng-show="!(
-			vm.selectedCountries.length + 
-			vm.selectedRegions.length + 
-			vm.selectedSectors.length + 
-			vm.selectedImplementingOrganisations.length + 
-			vm.selectedActivityStatuses.length +
-			vm.search.searchString.length) && !vm.selectedBudget.on && !vm.selectedTransactionYear.on">
-				No filters selected
+					<div style="margin-bottom:4px;" ng-show="!(
+					vm.selectedCountries.length + 
+					vm.selectedRegions.length + 
+					vm.selectedSectors.length + 
+					vm.selectedImplementingOrganisations.length + 
+					vm.selectedActivityStatuses.length +
+					vm.search.searchString.length) && !vm.selectedBudget.on && !vm.selectedTransactionYear.on">
+						No filters selected
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
